# awa-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_content_tables.py  0003_auth_tables.py  0004_menu_item_metadata.py  0005_featured_auction_tabs.py  0006_vehicle_listings.py  0007_remove_featured_auction_card_columns.py  0008_auction_vehicle_fk.py  0009_vehicle_seller_and_bid_bidder_fk.py  0010_admin_dashboard.py  0011_admin_dashboard_submenus.py  0012_admin_operations_cards.py  0013_admin_management_cards.py  0014_admin_accountant_cards.py  0015_admin_reports_cards.py  0016_admin_home_cards.py  0017_vehicle_status_metrics.py  0018_vehicle_payment_records.py  0019_vehicle_lookup_tables.py  0020_vehicle_submissions.py  0021_seed_uat_seller_users.py  (+12 more)
api/: deps.py
core/: access_tokens.py  config.py  database.py  kafka.py  logging.py  passwords.py  redis.py  roles.py  security.py  telemetry.py
docs/: awa-platform-er-diagram.mmd
models/: __init__.py  admin.py  auction.py  content.py  role.py  sub_seller.py  user.py  vehicle_intake.py  vehicle_payment.py
portal_templates/: vehicle_dashboard.html
schemas/: admin.py  auth.py  bid.py  content.py  role.py  vehicle_intake.py  vehicle_payment.py
services/: admin_service.py  auction_service.py  auth_service.py  bid_service.py  content_service.py  exceptions.py  role_service.py  vehicle_intake_service.py  vehicle_payment_service.py
tests/: conftest.py  test_admin.py  test_auctions.py  test_auth.py  test_bid_service.py  test_content.py  test_health.py  test_vehicle_intake.py  test_vehicle_payment.py
workers/: auction_worker.py
ws/: gateway.py
(+17 files in other folders)
