[project]
name = "awa-backend"
version = "0.1.0"
description = "Al Wataneya Auction (AWA) platform backend - FastAPI service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy[asyncio]==2.0.35",
    "pyodbc==5.1.0",
    "aioodbc==0.5.0",
    "alembic==1.13.2",
    "redis==5.0.8",
    "aiokafka==0.11.0",
    "python-jose[cryptography]==3.3.0",
    "argon2-cffi==23.1.0",
    "email-validator==2.2.0",
    "httpx==0.27.2",
    "tenacity==9.0.0",
    "structlog==24.4.0",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-exporter-otlp==1.27.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.6.9",
    "black==24.8.0",
    "mypy==1.11.2",
    "httpx==0.27.2",
    "fakeredis==2.24.1",
    "aioresponses==0.7.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=core --cov=api --cov=ws --cov=workers --cov=models --cov=schemas --cov=services --cov=main --cov-report=term-missing --cov-fail-under=70"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
